# hermes-notes

./: .gitignore  README.md  daily_summary.py  demo.py  email_config.json  notes_api.py  notes_cli.py  pyproject.toml  sync_vitepress.py
.github/workflows/: deploy.yml
docs/: index.md  package-lock.json  package.json
docs/.vitepress/: config.ts  sidebar.json
docs/notes/: 0001-Hermes-Agent-学习笔记.md  0002-Python-代码示例.md  0003-项目规范化.md  0004-Hermes-Notes-CLI.md  0004-notes_cli.py-cli_main-函数逻辑分析.md  0005-Hermes-Notes-公网访问方案分析.md  0005-测试笔记(已更新).md  0005-测试笔记.md  0006-详解：从本地笔记到GitHub-Pages-—-Vitepress自动化部署全流程.md  0007-HTTPS-页面下-HTTP-请求被阻止（Mixed-Content）的原因与解决方案.md  0008-AI-应用开发工程师-·-学习计划.md  0008-AI-应用开发工程师-·-学习计划（修正版-v2）.md  0008-AI-应用开发工程师-·-学习计划（修正版-v3）.md  0009-Deep-Agents-vs-Hermes-Agent-—-能力对比.md  0010-pip-install--e-.-—-详解可编辑安装模式.md  0011-Docker-技术详解-—-是什么、优势、原理.md  0012-cwd-与-PYTHONPATH-的区别详解.md  0013-WebWright-主流程分析.md  0014-python--c-与-Heredoc：Python-命令行执行方式详解.md  0015-Shell-重定向详解：-、2-&1-与日志记录.md  0016-Playwright-Locator-选择策略与-ARIA-Role-详解.md  0017-Webwright-浅析-——-微软开源-Web-Agent-框架.md  0018-Hermes-Agent-Skills-系统架构与规范.md  index.md
docs/tags/: ,.md  Playwright.md  Webwright.md  agent.md  ai-dev.md  ai-learning-plan.md  ai测试.md  analysis.md  architecture.md  automation.md  career-switch.md  ci-cd.md  cli.md  debugging.md  devops.md  docker.md  github-pages.md  hermes-notes.md  hermes.md  http.md  https.md  i.md  index.md  k.md  l.md  langchain.md  linux.md  network.md  notes.md  pip.md  playwright.md  python.md  s.md  shell.md  skill.md  (+23 more)
sqlite/: notes.db.backup
